--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2006 Actuate Corporation.
+ * Copyright (c) 2004, 2007 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] Defines the runtime API of the Open Data Access (ODA) extensions.
+[<b>Public API</b>] Defines the runtime API of the Open Data Access (ODA) extensions.
 ODA provides the capability to plug any external data source into  
 a data consumer application that supports the ODA framework.
 <p>
