Promotion of Provisional API to Platform API status

--- a/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Public API</b>] Defines an Open Data Access (ODA) design session
+[<b>Platform API</b>] Defines an Open Data Access (ODA) design session
 that allows a custom ODA designer tool to specify the
 slice of data to access at run-time.  
 <p>
