--- a/plugins/org.eclipse.datatools.connectivity.oda/schema-doc/org_eclipse_datatools_connectivity_oda_datasource.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/schema-doc/org_eclipse_datatools_connectivity_oda_datasource.html
@@ -2,8 +2,8 @@
 <HTML>
 <HEAD><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Open Data Access</title>
-<style>@import url("file:/D:/Lang/eclipse_33M5/plugins/org.eclipse.sdk_3.3.0.v20070205/book.css");</style>
-<style>@import url("file:/D:/Lang/eclipse_33M5/configuration/org.eclipse.osgi/bundles/78/1/.cp/schema.css");</style>
+<style>@import url("file:/D:/Lang/eclipse_33M6/plugins/org.eclipse.sdk_3.3.0.v20070228-0800/book.css");</style>
+<style>@import url("file:/D:/Lang/eclipse_33M6/configuration/org.eclipse.osgi/bundles/96/1/.cp/schema.css");</style>
 </HEAD>
 <BODY>
 <H1><CENTER>Open Data Access</CENTER></H1>
@@ -13,7 +13,7 @@
 <p></p>
 
 <p>
-<h6 class=CaptionFigColumn id=header>Description: </h6>This extension point is used to support the extension of design-time and run-time data source access by a data application.  Each extension must implement the Open Data Access (ODA) Java runtime interfaces defined in the <i>org.eclipse.datatools.connectivity.oda</i> package.</p>
+<h6 class=CaptionFigColumn id=header>Description: </h6>[Platform API] This extension point is used to support the extension of design-time and run-time data source access by a data application.  Each extension must implement the Open Data Access (ODA) Java runtime interfaces defined in the <i>org.eclipse.datatools.connectivity.oda</i> package.</p>
 <p><h6 class=CaptionFigColumn id=header>Configuration Markup:</h6></p>
 <p class=code id=dtd>&lt;!ELEMENT <a name="e.extension">extension</a> (<a href="#e.dataSource">dataSource</a> , <a href="#e.dataSet">dataSet</a>+)&gt;</p>
 <p class=code id=dtd>&lt;!ATTLIST extension</p>
