--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Public API</b>] Defines the runtime API of the Open Data Access (ODA) extensions.
+[<b>Platform API</b>] Defines the runtime API of the Open Data Access (ODA) extensions.
 ODA provides the capability to plug any external data source into  
 a data consumer application that supports the ODA framework.
 <p>
