--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/manifest/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/manifest/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Public API</b>] Provides a utility component for accessing the content of an 
+[<b>Platform API</b>] Provides a utility component for accessing the content of an 
 ODA data source extension's manifest.
 <br>
 It can be used by an ODA consumer and/or a data provider
