[220061] Deprecated the org.eclipse.datatools.connectivity.oda.impl package

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/impl/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/impl/package.html
@@ -22,14 +22,21 @@
 
 [<b>Non-API</b>] Provides a template implementation of the main ODA run-time interfaces.
 These classes assume the behavior of a simple ODA driver,
-and have labelled TODO tasks for a driver developer to 
+and have labelled TODO tags for a driver developer to 
 implement data source dependent behavior.
 These concrete classes are provided for use as templates or 
 base classes to aid in the development of an ODA custom driver.  
 Their use is purely optional.
 
 <!-- Put @see and @since tags down here. -->
+<p>
 @since 2.0
+<p>
+<b>Deprecated</b> As of 3.1.2. 
+<br>Use the ODA Plug-in Project Template Wizard instead to automatically generate 
+a custom ODA plug-in project that contains a template implementation of the main ODA interfaces.  
+<br>The wizard is available in the New->Project... dialog; one for ODA Runtime Driver, 
+another for ODA Designer. 
 
 </body>
 </html>
