updating about and removing a file

--- a/examples/org.eclipse.datatools.connectivity.sample.ftp/about.html
+++ b/examples/org.eclipse.datatools.connectivity.sample.ftp/about.html
@@ -1,40 +1,28 @@
-<!doctype HTML public "-//W3C//DTD HTML 4.0 Frameset//EN">
-
 <html>
-
 <head>
-
-<title>Aboutthiscontent</title>
-
-
+<title>About This Content</title>
 </head>
-
-
 <body>
+<div>
+<h3>About This Content</h3>
+<p>May 2, 2006</p>
+<h3>License</h3>
+<p>The Eclipse Foundation makes available all content in this plug-in
+(&quot;Content&quot;). Unless otherwise indicated below, the Content is
+provided to you under the terms and conditions of the Eclipse Public License
+Version 1.0 (&quot;EPL&quot;). A copy of the EPL is available at <a
+href="http://www.eclipse.org/org/documents/epl-v10.php">http://www.eclipse.org/legal/epl-v10.html</a>.
+For purposes of the EPL, &quot;Program&quot; will mean the Content.</p>
 
-<h3 style="font-family: 'Times New Roman', serif; font-size: 14pt;"><span 
- style="mso-fareast-font-family: Times New Roman;
-		mso-ansi-language: EN-US;
-		mso-fareast-language: EN-US;
-		mso-bidi-language: AR-SA;">A</span>bout this Content</h3>
-
-<span style="font-family: 'Times New Roman';
-				mso-fareast-font-family: Times New Roman;
-				mso-ansi-language: EN-US;
-				mso-fareast-language: EN-US;
-				mso-bidi-language: AR-SA;"><font style="font-size: 12pt;" size=2></font></span>
-<p style="font-size: 10pt; font-family: 'Times New Roman', serif;">Copyright© 2005 
- Sybase, Inc. All Rights Reserved.  <br>The software herein is furnished under a license agreement, and it may be used or copied only in accordance with the terms of that agreement.
-<br>See additional copyright notices in the legal notices section of the Release
-Bulletin. </p><img border="0" src="SybaseLogo2_black_sml.jpg">
-
-
-<br><a href="http://www.sybase.com"> http://www.sybase.com</a>
-
-<!--(Splash Image Supressed)==========================================================-->
-<!--<br><img border="0" src="ws1_0_splash.jpg" width="800" height="600">--> 
-
-
+<p>If you did not receive this Content directly from the Eclipse Foundation,
+the Content is being redistributed by another party (&quot;Redistributor&quot;)
+and different terms and conditions may apply to your use of any object code in
+the Content. Check the Redistributor’s license that was provided with the
+Content. If no such license exists, contact the Redistributor. Unless otherwise
+indicated below, the terms and conditions of the EPL still apply to any source
+code in the Content and such source code may be obtained at <a
+href="http://www.eclipse.org/">http://www.eclipse.org</a>.</p>
+<p>&nbsp;</p>
+</div>
 </body>
-
 </html>
