--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.models/about.html
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.models/about.html
@@ -5,7 +5,7 @@
 <META content="MSHTML 6.00.2800.1515" name=GENERATOR></HEAD>
 <BODY lang=EN-US>
 <H2>About This Content</H2>
-<P>February 24, 2005</P>
+<p>June 15, 2008</p>
 <H3>License</H3>
 <P>The Eclipse Foundation makes available all content in this plug-in 
 ("Content"). Unless otherwise indicated below, the Content is provided to you 
