[291549] ODA Dynamic Query Result Specification - promote to API status

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/impl/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/impl/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-Defines the result set specification of the Open Data Access (ODA) dynamicResultSet extension point.
+Implementation classes of the Open Data Access (ODA) dynamicResultSet extension point.
 <p>
 
 <!-- Put @see and @since tags down here. -->
