--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/manifest/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/manifest/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2009 Actuate Corporation.
+ * Copyright (c) 2009, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,13 +20,7 @@
 </head>
 <body bgcolor="white">
 
-<p>
-<strong>EXPERIMENTAL</strong>. This package has been added as
-part of a work in progress. There is no guarantee that this API will
-work or that it will remain the same. Please do not use this API without
-consulting with the DTP Open Data Access team.
-</p>
-Provides an utility component for accessing the capabilities registered by an 
+[<b>API</b>] Provides an utility component for accessing the capabilities registered by an 
 ODA extension that implements the
 <code>org.eclipse.datatools.connectivity.oda.dynamicResultSet</code> extension point.
 <br>
@@ -37,8 +31,9 @@ a dynamicResultSet extension's capabilities.
 <p>
 Use the singleton <code>ResultExtensionExplorer</code> as the entry point of this utility.
 <p>
+
 <!-- Put @see and @since tags down here. -->
-@since 3.2 (DTP 1.7)
+@since 3.3 (DTP 1.8)
 
 </body>
 </html>
