--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2009 Actuate Corporation.
+ * Copyright (c) 2009, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,17 +20,15 @@
 </head>
 <body bgcolor="white">
 
+[<b>API</b>] The runtime API for an ODA data set query's dynamic result set specification. 
 <p>
-<strong>EXPERIMENTAL</strong>. This package has been added as
-part of a work in progress. There is no guarantee that this API will
-work or that it will remain the same. Please do not use this API without
-consulting with the DTP Open Data Access team.
-</p>
-Defines the query specification in the Open Data Access (ODA) framework.
+It is an optional capability of an ODA data source extension contributed by an extension 
+that implements the <i>org.eclipse.datatools.connectivity.oda.dynamicResultSet</i> 
+extension point.
 <p>
 
 <!-- Put @see and @since tags down here. -->
-@since 3.2 (DTP 1.7)
+@since 3.3 (DTP 1.8)
 
 </body>
 </html>
