[291549] ODA Dynamic Query Result Specification - updated Javadoc

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
@@ -22,9 +22,11 @@
 
 [<b>API</b>] The runtime API for an ODA data set query's dynamic result set specification. 
 <p>
-It is an optional capability of an ODA data source extension contributed by an extension 
-that implements the <i>org.eclipse.datatools.connectivity.oda.dynamicResultSet</i> 
-extension point.
+This package and its sub-packages specify the dynamic operations, such as filtering, 
+row ordering and projection, on a query's result set.
+Support of the optional dynamic operations for an ODA data source extension
+is contributed by an extension that implements
+the <i>org.eclipse.datatools.connectivity.oda.dynamicResultSet</i> extension point.
 <p>
 
 <!-- Put @see and @since tags down here. -->
