--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/result/filter/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/result/filter/package.html
@@ -20,7 +20,8 @@
 </head>
 <body bgcolor="white">
 
-Defines the concrete filter expressions for use in the Open Data Access (ODA) filtering specification.
+Defines the concrete filter expressions for use in the Open Data Access (ODA) 
+result set filtering specification.
 <p>
 
 <!-- Put @see and @since tags down here. -->
