[331057] Clean up Javadoc in ODA framework packages

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/manifest/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/manifest/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>API</b>] Provides an utility component for accessing the capabilities registered by an 
+Provides a utility component for accessing the capabilities registered by an 
 ODA extension that implements the
 <code>org.eclipse.datatools.connectivity.oda.dynamicResultSet</code> extension point.
 <br>
