--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/spec/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>API</b>] The runtime API for an ODA data set query's dynamic result set specification. 
+The runtime API for an ODA data set query's dynamic result set specification. 
 <p>
 This package and its sub-packages specify the dynamic operations, such as filtering, 
 row ordering and projection, on a query's result set.
