--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/services/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/services/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
+ * Copyright (c) 2006, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] An ODA consumer framework package that allows 
+An ODA consumer framework package that allows 
 an ODA consumer application 
 to extend and provide application-specific services.
 
