--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/wizards/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/wizards/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
+ * Copyright (c) 2006, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] Contains the base classes for extending the
+Contains the base classes for extending the
 data source wizard and property pages, and 
 data set wizard and property pages
 in the Open Data Access (ODA) Designer UI framework.
