--- a/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/util/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/src/org/eclipse/datatools/connectivity/oda/design/util/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
+ * Copyright (c) 2005, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] Provides a utility component for handling of
+Provides a utility component for handling of
 ODA Design API objects.
 <br>
 It can be used by an ODA consumer and/or a data provider
