--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/logging/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/logging/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2007 Actuate Corporation.
+ * Copyright (c) 2004, 2010 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Non-API</b>] Provides a trace logging utility to an 
+Provides a trace logging utility to an 
 ODA runtime extension.
 <p>
 The package provides a default implementation of trace logging framework,
