[358686] Refined log message and name of cipherProvider ext point

--- a/plugins/org.eclipse.datatools.connectivity/schema-doc/org_eclipse_datatools_connectivity_cipherProvider.html
+++ b/plugins/org.eclipse.datatools.connectivity/schema-doc/org_eclipse_datatools_connectivity_cipherProvider.html
@@ -9,7 +9,7 @@
 <H1 style="text-align:center">Connectivity Profile Store Cipher Provider</H1>
 <p></p>
 <h6 class="CaptionFigColumn SchemaHeader">Identifier: </h6>org.eclipse.datatools.connectivity.cipherProvider<p></p>
-<h6 class="CaptionFigColumn SchemaHeader">Since: </h6>DTP 1.9.2
+<h6 class="CaptionFigColumn SchemaHeader">Since: </h6>1.2.4 (DTP 1.9.2)
 <p></p>
 
 <h6 class="CaptionFigColumn SchemaHeader">Description: </h6>This cipherProvider extension point allows a client to extend the connection profile store encryption framework with  a custom provider of <i>javax.crypto.Cipher</i> instances.<p></p>
